# axi

./: .gitignore  pyproject.toml  requirements.txt  setup.py
axi/: __init__.py  axidraw.ini  device.py  drawing.py  hershey.py  hershey_fonts.py  lindenmayer.py  main.py  paths.py  planner.py  progress.py  renderer.py  spatial.py  svg_load.py  turtle.py  util.py
tests/: test_drawing.py  test_paths.py
