[tool.poetry]
name = "axi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
click = "^8.1.3"
shapely = "^2.0.0"
numpy = "^1.24.1"
scipy = "^1.10.0"
pytest = "^7.2.0"
matplotlib = "^3.6.3"
pyglet = ">=1.5.27,<1.6.0"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
