[tool.poetry]
name = "axi"
version = "0.1.1"
description = ""
authors = ["El Kaplan <kaplan.el.j@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
click = "^8.1.3"
shapely = "^2.0.0"
numpy = "^1.24.1"
scipy = "^1.10.0"
pytest = "^7.2.0"
matplotlib = "^3.6.3"
pyglet = ">=1.5.27,<1.6.0"
pyserial = "^3.5"
hypothesis = "^6.62.1"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
